# iup-meson

./: .gitignore  COPYRIGHT  README.md  meson.build  meson_options.txt  shell.nix
components/controls/: meson.build
components/iupcd/: meson.build
components/iupscintilla/: meson.build
components/iupscintilla/scintilla3112/gtk/: ScintillaGTKAccessible.cxx
components/iupscintilla/scintilla3112/src/: Catalogue.cxx
examples/notepad/: main.c  meson.build
libs/cd/: meson.build
libs/cd/src/cairo/: cdcairodbuf.c
libs/cd/src/drv/: cdirgb.c
libs/im/: meson.build
libs/im/src/libexif/: meson.build
libs/im/src/libjasper/: meson.build
libs/im/src/libjasper2/: meson.build
libs/im/src/libjasper2/jasper/: jas_config.h
src/: meson.build
src/dep/: iup.dep.Linux319_64
src/gtk/: meson.build
src/win/: iupwin_info.c  meson.build
tools/ledc/: meson.build  y.tab.c
tools/vled/: iup_vled.c  meson.build
