iup_scintilla_src = [
    'iupsci_selection.c',
    'iupsci_markers.c',
    'iupsci_searching.c',
    'iupsci_indicator.c',
    'iupsci_whitespace.c',
    'iupsci_text.c',
    'iupsci_lexer.c',
    'iup_scintilla.c',
    'iupsci_folding.c',
    'iupsci_print.c',
    'iupsci_wordwrap.c',
    'iupsci_scrolling.c',
    'iupsci_clipboard.c',
    'iupsci_annotation.c',
    'iupsci_cursor.c',
    'iupsci_autocompletion.c',
    'iupsci_overtype.c',
    'iupsci_tab.c',
    'iupsci_margin.c',
    'iupsci_bracelight.c',
    'iup_scintilladlg.c',
    'iupsci_style.c',
]

scintilla3112_src = [
    'scintilla3112/src/AutoComplete.cxx',
    'scintilla3112/src/CallTip.cxx',
    'scintilla3112/src/Catalogue.cxx',
    'scintilla3112/src/CellBuffer.cxx',
    'scintilla3112/src/CharClassify.cxx',
    'scintilla3112/src/ContractionState.cxx',
    'scintilla3112/src/Decoration.cxx',
    'scintilla3112/src/Document.cxx',
    'scintilla3112/src/Editor.cxx',
    'scintilla3112/src/ExternalLexer.cxx',
    'scintilla3112/src/Indicator.cxx',
    'scintilla3112/src/KeyMap.cxx',
    'scintilla3112/src/LineMarker.cxx',
    'scintilla3112/src/PerLine.cxx',
    'scintilla3112/src/PositionCache.cxx',
    'scintilla3112/src/RESearch.cxx',
    'scintilla3112/src/RunStyles.cxx',
    'scintilla3112/src/ScintillaBase.cxx',
    'scintilla3112/src/Selection.cxx',
    'scintilla3112/src/Style.cxx',
    'scintilla3112/src/UniConversion.cxx',
    'scintilla3112/src/ViewStyle.cxx',
    'scintilla3112/src/XPM.cxx',
    'scintilla3112/src/CaseConvert.cxx',
    'scintilla3112/src/CaseFolder.cxx',
    'scintilla3112/src/EditModel.cxx',
    'scintilla3112/src/EditView.cxx',
    'scintilla3112/src/MarginView.cxx',
    # for 3.11.2 use next two
    'scintilla3112/src/DBCS.cxx',
    'scintilla3112/src/UniqueString.cxx',

]

scintilla3112_lexer_src = [
    'scintilla3112/lexers/LexA68k.cxx',
    'scintilla3112/lexers/LexAbaqus.cxx',
    'scintilla3112/lexers/LexAda.cxx',
    'scintilla3112/lexers/LexAPDL.cxx',
    'scintilla3112/lexers/LexAsn1.cxx',
    'scintilla3112/lexers/LexASY.cxx',
    'scintilla3112/lexers/LexAU3.cxx',
    'scintilla3112/lexers/LexAVE.cxx',
    'scintilla3112/lexers/LexAVS.cxx',
    'scintilla3112/lexers/LexBaan.cxx',
    'scintilla3112/lexers/LexBash.cxx',
    'scintilla3112/lexers/LexBasic.cxx',
    'scintilla3112/lexers/LexBullant.cxx',
    'scintilla3112/lexers/LexCaml.cxx',
    'scintilla3112/lexers/LexCLW.cxx',
    'scintilla3112/lexers/LexCmake.cxx',
    'scintilla3112/lexers/LexCOBOL.cxx',
    'scintilla3112/lexers/LexCoffeeScript.cxx',
    'scintilla3112/lexers/LexConf.cxx',
    'scintilla3112/lexers/LexCPP.cxx',
    'scintilla3112/lexers/LexCrontab.cxx',
    'scintilla3112/lexers/LexCsound.cxx',
    'scintilla3112/lexers/LexCSS.cxx',
    'scintilla3112/lexers/LexD.cxx',
    'scintilla3112/lexers/LexECL.cxx',
    'scintilla3112/lexers/LexEiffel.cxx',
    'scintilla3112/lexers/LexErlang.cxx',
    'scintilla3112/lexers/LexEScript.cxx',
    'scintilla3112/lexers/LexFlagship.cxx',
    'scintilla3112/lexers/LexForth.cxx',
    'scintilla3112/lexers/LexFortran.cxx',
    'scintilla3112/lexers/LexGAP.cxx',
    'scintilla3112/lexers/LexGui4Cli.cxx',
    'scintilla3112/lexers/LexHaskell.cxx',
    'scintilla3112/lexers/LexHTML.cxx',
    'scintilla3112/lexers/LexInno.cxx',
    'scintilla3112/lexers/LexKix.cxx',
    'scintilla3112/lexers/LexLisp.cxx',
    'scintilla3112/lexers/LexLout.cxx',
    'scintilla3112/lexers/LexLua.cxx',
    'scintilla3112/lexers/LexMagik.cxx',
    'scintilla3112/lexers/LexMarkdown.cxx',
    'scintilla3112/lexers/LexMatlab.cxx',
    'scintilla3112/lexers/LexMetapost.cxx',
    'scintilla3112/lexers/LexMMIXAL.cxx',
    'scintilla3112/lexers/LexModula.cxx',
    'scintilla3112/lexers/LexMPT.cxx',
    'scintilla3112/lexers/LexMSSQL.cxx',
    'scintilla3112/lexers/LexMySQL.cxx',
    'scintilla3112/lexers/LexNimrod.cxx',
    'scintilla3112/lexers/LexNsis.cxx',
    'scintilla3112/lexers/LexOpal.cxx',
    'scintilla3112/lexers/LexOScript.cxx',
    'scintilla3112/lexers/LexPascal.cxx',
    'scintilla3112/lexers/LexPB.cxx',
    'scintilla3112/lexers/LexPerl.cxx',
    'scintilla3112/lexers/LexPLM.cxx',
    'scintilla3112/lexers/LexPO.cxx',
    'scintilla3112/lexers/LexPOV.cxx',
    'scintilla3112/lexers/LexPowerPro.cxx',
    'scintilla3112/lexers/LexPowerShell.cxx',
    'scintilla3112/lexers/LexProgress.cxx',
    'scintilla3112/lexers/LexPS.cxx',
    'scintilla3112/lexers/LexPython.cxx',
    'scintilla3112/lexers/LexR.cxx',
    'scintilla3112/lexers/LexRebol.cxx',
    'scintilla3112/lexers/LexRuby.cxx',
    'scintilla3112/lexers/LexScriptol.cxx',
    'scintilla3112/lexers/LexSmalltalk.cxx',
    'scintilla3112/lexers/LexSML.cxx',
    'scintilla3112/lexers/LexSorcus.cxx',
    'scintilla3112/lexers/LexSpecman.cxx',
    'scintilla3112/lexers/LexSpice.cxx',
    'scintilla3112/lexers/LexSQL.cxx',
    'scintilla3112/lexers/LexTACL.cxx',
    'scintilla3112/lexers/LexTADS3.cxx',
    'scintilla3112/lexers/LexTAL.cxx',
    'scintilla3112/lexers/LexTCL.cxx',
    'scintilla3112/lexers/LexTCMD.cxx',
    'scintilla3112/lexers/LexTeX.cxx',
    'scintilla3112/lexers/LexTxt2tags.cxx',
    'scintilla3112/lexers/LexVB.cxx',
    'scintilla3112/lexers/LexVerilog.cxx',
    'scintilla3112/lexers/LexVHDL.cxx',
    'scintilla3112/lexers/LexVisualProlog.cxx',
    'scintilla3112/lexers/LexYAML.cxx',
    'scintilla3112/lexers/LexKVIrc.cxx',
    'scintilla3112/lexers/LexLaTeX.cxx',
    'scintilla3112/lexers/LexSTTXT.cxx',
    'scintilla3112/lexers/LexRust.cxx',
    'scintilla3112/lexers/LexDMAP.cxx',
    'scintilla3112/lexers/LexDMIS.cxx',
    'scintilla3112/lexers/LexBibTeX.cxx',
    'scintilla3112/lexers/LexHex.cxx',
    'scintilla3112/lexers/LexAsm.cxx',
    'scintilla3112/lexers/LexRegistry.cxx',
    'scintilla3112/lexers/LexLed.cxx',
    'scintilla3112/lexers/LexBatch.cxx',
    'scintilla3112/lexers/LexDiff.cxx',
    'scintilla3112/lexers/LexErrorList.cxx',
    'scintilla3112/lexers/LexMake.cxx',
    'scintilla3112/lexers/LexNull.cxx',
    'scintilla3112/lexers/LexProps.cxx',
    'scintilla3112/lexers/LexJSON.cxx',
    'scintilla3112/lexers/LexEDIFACT.cxx',
    'scintilla3112/lexers/LexIndent.cxx',
    'scintilla3112/lexers/LexCIL.cxx',
    'scintilla3112/lexers/LexDataflex.cxx',
    'scintilla3112/lexers/LexHollywood.cxx',
    'scintilla3112/lexers/LexMaxima.cxx',
    'scintilla3112/lexers/LexNim.cxx',
    'scintilla3112/lexers/LexSAS.cxx',
    'scintilla3112/lexers/LexStata.cxx',
    'scintilla3112/lexers/LexX12.cxx',
    #'scintilla3112/lexers/LexLPeg.cxx',
    'scintilla3112/lexlib/Accessor.cxx',
    'scintilla3112/lexlib/CharacterSet.cxx',
    'scintilla3112/lexlib/LexerBase.cxx',
    'scintilla3112/lexlib/LexerModule.cxx',
    'scintilla3112/lexlib/LexerNoExceptions.cxx',
    'scintilla3112/lexlib/LexerSimple.cxx',
    'scintilla3112/lexlib/PropSetSimple.cxx',
    'scintilla3112/lexlib/StyleContext.cxx',
    'scintilla3112/lexlib/WordList.cxx',
    'scintilla3112/lexlib/CharacterCategory.cxx',
    'scintilla3112/lexlib/DefaultLexer.cxx',
]

scintilla3112_gtk_src = [
    'scintilla3112/gtk/PlatGTK.cxx',
    'scintilla3112/gtk/ScintillaGTK.cxx',
    'scintilla3112/gtk/scintilla-marshal.c',
    'scintilla3112/gtk/ScintillaGTKAccessible.cxx',
]


scintilla3112_src += scintilla3112_lexer_src

if host_machine.system() == 'linux'
    scintilla3112_src += scintilla3112_gtk_src
    iup_scintilla_src += 'iup_scintilla_gtk.c'
    # TODO(nortio): add 'iup_scintilla_win.c' for windows
endif

iup_scintilla_src += scintilla3112_src

iup_scintilla_c_args = [
    '-DSTATIC_BUILD',
    '-DSCI_LEXER',
    '-DSCI_NAMESPACE',
    '-DLPEG_LEXER',
    '-DSCINTILLA_VERSION="3.11.2"',
    '-DGTK',
    '-DGTK_DISABLE_DEPRECATED',
    '-DGSEAL_ENABLE',
    '-DG_HAVE_ISO_VARARGS',
]

atk_dep = dependency('atk')
gtk_dep = dependency('gtk+-3.0')
gmodule_dep = dependency('gmodule-2.0')

iup_scintilla_includes = ['scintilla3112/include']

iup_scintilla = static_library(
    'iup_scintilla',
    iup_scintilla_src,
    dependencies: [gtk_dep, atk_dep, gmodule_dep],
    c_args: iup_scintilla_c_args,
    cpp_args: iup_scintilla_c_args,
    include_directories: [
        iup_scintilla_includes,
        '../../include/',
        '../../src',
        '../../src/gtk',
        'scintilla3112/src',
        'scintilla3112/lexlib',
    ],
    override_options: ['cpp_std=c++17']
)

iup_scintilla_dep = declare_dependency(link_with: iup_scintilla, include_directories: [iup_scintilla_includes])