win_driver_src = [
    'src/win/iupwindows_info.c',
    'src/win/iupwin_calendar.c',
    'src/win/iupwin_image.c',
    'src/win/iupwin_focus.c',
    'src/win/iupwin_label.c',
    'src/win/iupwin_handle.c',
    'src/win/iupwin_progressbar.c',
    'src/win/iupwin_image_wdl.c',
    'src/win/iupwin_font.c',
    'src/win/iupwin_touch.c',
    'src/win/iupwin_messagedlg.c',
    'src/win/iupwin_timer.c',
    'src/win/iupwin_filedlg.c',
    'src/win/iupwindows_help.c',
    'src/win/iupwin_tips.c',
    'src/win/iupwin_dialog.c',
    'src/win/iupwin_clipboard.c',
    'src/win/iupwin_draw_gdi.c',
    'src/win/iupwin_common.c',
    'src/win/wdl/backend-dwrite.c',
    'src/win/wdl/canvas.c',
    'src/win/wdl/backend-gdix.c',
    'src/win/wdl/string.c',
    'src/win/wdl/strokestyle.c',
    'src/win/wdl/misc.c',
    'src/win/wdl/draw.c',
    'src/win/wdl/init.c',
    'src/win/wdl/font.c',
    'src/win/wdl/brush.c',
    'src/win/wdl/path.c',
    'src/win/wdl/fill.c',
    'src/win/wdl/memstream.c',
    'src/win/wdl/bitblt.c',
    'src/win/wdl/cachedimage.c',
    'src/win/wdl/backend-wic.c',
    'src/win/wdl/backend-d2d.c',
    'src/win/wdl/image.c',
    'src/win/iupwin_fontdlg.c',
    'src/win/iupwin_loop.c',
    'src/win/iupwin_button.c',
    'src/win/iupwin_menu.c',
    'src/win/iupwin_frame.c',
    'src/win/iupwin_datepick.c',
    'src/win/iupwin_val.c',
    'src/win/iupwin_str.c',
    'src/win/iupwin_globalattrib.c',
    'src/win/iupwin_tabs.c',
    'src/win/iupwin_list.c',
    'src/win/iupwin_canvas.c',
    'src/win/iupwin_tree.c',
    'src/win/iupwin_text.c',
    'src/win/iupwin_brush.c',
    'src/win/iupwin_toggle.c',
    'src/win/iupwin_open.c',
    'src/win/iupwin_draw.c',
    'src/win/iupwin_key.c',
    'src/win/iupwindows_main.c',
    'src/win/iupwin_draw_wdl.c',
    'src/win/iupwin_info.c',
    'src/win/iupwin_dragdrop.c',
]