win_driver_src = [
    'win/iupwindows_info.c',
    'win/iupwin_calendar.c',
    'win/iupwin_image.c',
    'win/iupwin_focus.c',
    'win/iupwin_label.c',
    'win/iupwin_handle.c',
    'win/iupwin_progressbar.c',
    'win/iupwin_image_wdl.c',
    'win/iupwin_font.c',
    'win/iupwin_touch.c',
    'win/iupwin_messagedlg.c',
    'win/iupwin_timer.c',
    'win/iupwin_filedlg.c',
    'win/iupwindows_help.c',
    'win/iupwin_tips.c',
    'win/iupwin_dialog.c',
    'win/iupwin_clipboard.c',
    'win/iupwin_draw_gdi.c',
    'win/iupwin_common.c',
    'win/wdl/backend-dwrite.c',
    'win/wdl/canvas.c',
    'win/wdl/backend-gdix.c',
    'win/wdl/string.c',
    'win/wdl/strokestyle.c',
    'win/wdl/misc.c',
    'win/wdl/draw.c',
    'win/wdl/init.c',
    'win/wdl/font.c',
    'win/wdl/brush.c',
    'win/wdl/path.c',
    'win/wdl/fill.c',
    'win/wdl/memstream.c',
    'win/wdl/bitblt.c',
    'win/wdl/cachedimage.c',
    'win/wdl/backend-wic.c',
    'win/wdl/backend-d2d.c',
    'win/wdl/image.c',
    'win/iupwin_fontdlg.c',
    'win/iupwin_loop.c',
    'win/iupwin_button.c',
    'win/iupwin_menu.c',
    'win/iupwin_frame.c',
    'win/iupwin_datepick.c',
    'win/iupwin_val.c',
    'win/iupwin_str.c',
    'win/iupwin_globalattrib.c',
    'win/iupwin_tabs.c',
    'win/iupwin_list.c',
    'win/iupwin_canvas.c',
    'win/iupwin_tree.c',
    'win/iupwin_text.c',
    'win/iupwin_brush.c',
    'win/iupwin_toggle.c',
    'win/iupwin_open.c',
    'win/iupwin_draw.c',
    'win/iupwin_key.c',
    'win/iupwindows_main.c',
    'win/iupwin_draw_wdl.c',
    'win/iupwin_info.c',
    'win/iupwin_dragdrop.c',
]