libjasper_src = [
'base/jas_version.c',
'base/jas_string.c',
'base/jas_tmr.c',
'base/jas_debug.c',
'base/jas_icc.c',
'base/jas_stream.c',
'base/jas_cm.c',
'base/jas_getopt.c',
'base/jas_init.c',
'base/jas_malloc.c',
'base/jas_tvp.c',
'base/jas_image.c',
'base/jas_iccdata.c',
'base/jas_seq.c',
'jpc/jpc_t1dec.c',
'jpc/jpc_t1cod.c',
'jpc/jpc_tagtree.c',
'jpc/jpc_mqdec.c',
'jpc/jpc_tsfb.c',
'jpc/jpc_dec.c',
'jpc/jpc_t1enc.c',
'jpc/jpc_t2cod.c',
'jpc/jpc_qmfb.c',
'jpc/jpc_mqcod.c',
'jpc/jpc_bs.c',
'jpc/jpc_math.c',
'jpc/jpc_mqenc.c',
'jpc/jpc_util.c',
'jpc/jpc_mct.c',
'jpc/jpc_cs.c',
'jpc/jpc_t2dec.c',
'jpc/jpc_enc.c',
'jpc/jpc_t2enc.c',
'jp2/jp2_cod.c',
'jp2/jp2_enc.c',
'jp2/jp2_dec.c',
]

libjasper = static_library('libjasper', libjasper_src, include_directories: ['jasper'])

libjasper_dep = declare_dependency(link_with: libjasper, include_directories: ['jasper'])